--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/basir/amazona.git"
+    "url": "git+https://github.com/eoinlynchcodes/timberandbarkmulch.git"
   },
   "author": "",
   "license": "ISC",
